--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "test": "npm test"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,10 @@
     "svelte": ">= 3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "rollup": "^1.27.14",
     "rollup-plugin-node-resolve": "^5.2.0",
     "svelte": ">= 3.0.0"
