--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepublish": "npm run build",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "@babel/preset-env": "^7.7.7",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
+    "np": "^5.2.1",
     "rollup": "^1.27.14",
     "rollup-plugin-node-resolve": "^5.2.0",
     "svelte": ">= 3.0.0"
