--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup -c rollup.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepublish": "npm run build",
+    "prerelease": "npm run build",
     "release": "np"
   },
   "repository": {
